--- a/styles/help/variables.scss
+++ b/styles/help/variables.scss
@@ -3,6 +3,7 @@ $font1-bold:'Poppins Bold';
 $font1-medium:'Poppins Medium';
 $font1-semibold:'Poppins SemiBold';
 $font1-regular:'Poppins Regular';
+$font1-light:'Poppins Light';
 
 // COLORS
 $prime-1:#03a9f4;
