--- a/styles/help/mixin.scss
+++ b/styles/help/mixin.scss
@@ -24,6 +24,12 @@
 	height: 40px;
 	border-radius: 3px;
 }
+@mixin background($bg-color,$padding,$border:none,$box-shadow:none){
+	padding: $padding;
+	background-color: $bg-color;
+	border: $border;
+	box-shadow: $box-shadow;
+}
 .hover {
 	cursor: pointer;
 }
