--- a/styles/help/variables.scss
+++ b/styles/help/variables.scss
@@ -10,6 +10,8 @@ $prime-1:#03a9f4;
 $prime-2:#f75e2e;
 $prime-3:#ecfa4d;
 $prime-4:#656a70;
+$standart-gray:#f5f9f9;
+$green:#09a912;
 //light
 $pr-1-light-1:mix(#fff,$prime-1,40%);
 $pr-1-light-2:mix(#fff,$prime-1,75%);
